--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,18 @@
 {
-    "name": "laravel-zero/laravel-zero",
+    "name": "fwartner/bearsaw",
     "description": "The Laravel Zero Framework.",
-    "keywords": ["framework", "laravel", "laravel zero", "console", "cli"],
-    "homepage": "https://laravel-zero.com",
+    "keywords": ["bear", "jigsaw", "laravel zero", "blog", "markdown"],
+    "homepage": "https://wartner.io",
     "type": "project",
     "license": "MIT",
     "support": {
-        "issues": "https://github.com/laravel-zero/laravel-zero/issues",
-        "source": "https://github.com/laravel-zero/laravel-zero"
+        "issues": "https://github.com/fwartner/bearsaw/issues",
+        "source": "https://github.com/fwartner/bearsaw"
     },
     "authors": [
         {
-            "name": "Nuno Maduro",
-            "email": "enunomaduro@gmail.com"
+            "name": "Florian Wartner",
+            "email": "florian@wartner.io"
         }
     ],
     "repositories": [
