--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,7 @@
             "@php application app:rename"
         ]
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true,
     "bin": ["bearsaw"]
 }
